<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/transparency"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/tv_title"
            android:text="@string/set_date"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_alignParentStart="true" />

        <DatePicker
            android:id="@+id/picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/img_line"
            android:isScrollContainer="false" />

        <ImageView
            android:id="@+id/img_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ble_colorful_line"
            android:layout_below="@+id/tv_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_below="@id/picker"
            android:gravity="center">

            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/cancel_tp"
                android:layout_width="100dp"
                android:layout_marginRight="10dp"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/btn_ok"
                android:text="@string/ok_tp"
                android:layout_width="100dp"
                android:layout_marginLeft="10dp"
                android:layout_height="40dp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>