<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_cd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/music_color_panel" />

        <RelativeLayout
            android:id="@+id/rl_music_toggle"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:layout_width="80dp"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/img_music_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/music_play_colorful" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_control"
        android:layout_below="@+id/rl_cd"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_music"
            android:layout_centerHorizontal="true"
            android:text="music title"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_next"
            android:src="@mipmap/music_next_colorful"
            android:layout_toRightOf="@+id/btn_music"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_previous"
            android:src="@mipmap/music_before_colorful"
            android:layout_toLeftOf="@+id/btn_music"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/rl_control"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_music_rock"
            android:text="@string/music_rock"
            android:layout_centerInParent="true"
            android:background="#007AFF"
            android:textColor="@color/white"
            android:layout_width="80dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_music_default"
            android:text="@string/music_default_mode"
            android:layout_centerInParent="true"
            android:textColor="@color/button_blue"
            android:background="@drawable/shape_music_mode_unselected_button"
            android:layout_width="80dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_music_jazz"
            android:text="@string/music_jazz"
            android:layout_centerInParent="true"
            android:textColor="@color/button_blue"
            android:background="@drawable/shape_music_mode_unselected_button"
            android:layout_width="80dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_music_classical"
            android:text="@string/music_classical"
            android:layout_centerInParent="true"
            android:textColor="@color/button_blue"
            android:background="@drawable/shape_music_mode_unselected_button"
            android:layout_width="80dp"
            android:layout_height="40dp" />

    </LinearLayout>


</RelativeLayout>