<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_ble_search"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:id="@+id/tv_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ble_device_list"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/rl_search_scan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            >

            <ImageView
                android:id="@+id/img_scan"
                android:src="@mipmap/ble_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/ble_colorful_line" />
    </RelativeLayout>

    <com.wangjingxi.outsourcing.gvsinglecolor.ui.MyScrollview
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_add_group"
        android:layout_below="@+id/rl_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mRecyclerView_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

            <RelativeLayout
                android:id="@+id/rl_ungrouped"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/ble_ungrouped"
                    android:textColor="#0178FF"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#0178FF" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />
        </LinearLayout>

    </com.wangjingxi.outsourcing.gvsinglecolor.ui.MyScrollview>

    <Button
        android:id="@+id/btn_add_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/ble_add_group" />

    <RelativeLayout
        android:id="@+id/rl_wheel"
        android:layout_width="match_parent"
        android:clickable="true"
        android:visibility="gone"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rl_wheel_titile"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <RelativeLayout
                android:id="@+id/rl_cancel"
                android:layout_width="80dp"
                android:layout_height="match_parent">

                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/cancel"
                    android:textColor="#1D8ED7" />

            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/rl_ok"
                android:layout_width="80dp"
                android:layout_alignParentRight="true"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_ok"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/ok"
                    android:textColor="#1D8ED7" />

            </RelativeLayout>



            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/please_select_group"
                android:textColor="@color/black" />

            <View
                android:background="@color/gray"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

        </RelativeLayout>


        <com.wangjingxi.outsourcing.gvsinglecolor.ui.WheelView
            android:id="@+id/wheelView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_wheel_titile"
             />

    </RelativeLayout>



    <ImageView
        android:id="@+id/img_background"
        android:layout_below="@+id/rl_top"
        android:layout_marginBottom="245dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:alpha="0"
        android:background="#262a34"
        android:clickable="true" />



</RelativeLayout>